<resources>

    <!-- APP LABELS -->
    <string name="app_name">Calculator BMI</string>
    <string name="mass_label">Mass</string>
    <string name="height_label">Height</string>
    <string name="calculate_button_label">Calculate!</string>
    <string name="share_button_label">Share!</string>


    <!-- UNIT CHOSE -->
    <string name="unit_label">Unit</string>
    <string name="unit_prompt">Choose unit</string>
    <string-array name="units_array">
        <item>kg/m^2</item>
        <item>pounds/inch^2</item>
    </string-array>

    <!-- SHARE BUTTON -->
    <string name="bmi_share_text">"My BMI is: %1$.2f"</string>
    <string name="bmi_share_text_label">"Share your BMI"</string>

    <!-- BMI -->
    <string name="result_empty">Click calculate to get your BMI</string>
    <string name="result_wrong_data">Wrong data!</string>
    <string name="result_ok">Your BMI is: %1$.2f </string>

    <!-- MENU -->
    <string name="save">Save data</string>
    <string name="load">Load data</string>
    <string name="about_me_activity">About author</string>
    <string name="exit">Exit</string>


    <!-- SECOND ACTIVITY -->
    <string name="about_me_text">
        Project name: BMICalculator\nCreator: Przemyslaw Materna\nIndex: 228114
    </string>

    <!-- DATA SAVER -->
    <string name="mass_saved_val">mass_val</string>
    <string name="height_saved_val">height_val</string>
    <string name="data_saved">Data saved!</string>
    <string name="no_data_saved">There is no data saved :(</string>
    <string name="date_loaded">Data loaded!</string>

    <!-- GENERAL -->
    <string name="invalid_data">Invalid Data :(</string>
</resources>
